--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main_visual bg-gradient-to-t from-[#efebe4] to-[#fffefe]">
       <div class="header px-6 lg:mx-[140px] flex justify-between items-center py-10 border border-none">
           <div class="icon">
-              <img src="/c2-assets/logo-header.png" alt="logo">
+              <img src="c2-assets/logo-header.png" alt="logo">
           </div>
           <div class="menu hidden lg:block">
               <ul class="flex text-[#111111] text-[20px] gap-6">
@@ -64,7 +64,7 @@
               covered every day!</p>
       </div>
       <div class="mx-6">
-          <img src="/c2-assets/hero-vegetables.png" alt="" class="mx-auto lg:w-[60%] ">
+          <img src="c2-assets/hero-vegetables.png" alt="" class="mx-auto lg:w-[60%] ">
       </div>
   </div>
 
