--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="flex flex-col gap-6 items-center text-center bg-[#efebe4]  p-6 rounded-[16px]">
               <div class="bg-white rounded-full p-4">
 
-                  <img src="/c2-assets/service.png" alt="service">
+                  <img src="c2-assets/service.png" alt="service">
               </div>
               <h1 class="font-semibold text-[#111111] text-xl">24/7 Service</h1>
               <p class="text-light font-normal text-[#1111116c]">24/7 service is a service that is available 24 hours a day, 7 days a week. It's often used in commerce and industry to describe services that are available at any time</p>
@@ -86,7 +86,7 @@
           <div class="flex flex-col gap-6 items-center text-center bg-[#efebe4] p-6 rounded-[16px]">
               <div class="bg-white rounded-full p-4">
 
-                  <img src="/c2-assets/delivery.png" alt="delivery">
+                  <img src="c2-assets/delivery.png" alt="delivery">
               </div>
               <h1 class="font-semibold text-[#111111] text-xl">Fast Delivery</h1>
               <p class="text-light font-normal text-[#1111116c]">Our Chittagong delivery service for delivering parcels on time to Chittagong. We have domestic or international logistic network in Chittagong, We offer urgent document courier service with same or next day delivery to Chittagong. </p>
@@ -94,7 +94,7 @@
           <div class="flex flex-col gap-6 items-center text-center bg-[#efebe4] p-6 rounded-[16px]">
               <div class="bg-white rounded-full p-4">
 
-                  <img src="/c2-assets/healthy.png" alt="healthy">
+                  <img src="c2-assets/healthy.png" alt="healthy">
               </div>
               <h1 class="font-semibold text-[#111111] text-xl">Healthy Products </h1>
               <p class="text-light font-normal text-[#1111116c]">Eat dark green vegetables at least three to four times a week. Good options include broccoli, peppers, brussel sprouts and leafy greens like kale and spinach.</p>
@@ -114,14 +114,14 @@
                   </div>
               </div>
               <div class="flex justify-end">
-                  <img src="/c2-assets/vegetable-offer.png" alt="">
+                  <img src="c2-assets/vegetable-offer.png" alt="">
               </div>
 
           </div>
           <div class=" grid grid-cols-2 lg:grid-cols-3 gap-6">
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px]  rounded-[10px]" src="/c2-assets/nion.png" alt="">
+                      <img class="w-[70px]  rounded-[10px]" src="c2-assets/nion.png" alt="">
                   </div>
                   <div class="flex flex-col gap-1">
                       <p>
@@ -134,7 +134,7 @@
 
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px] rounded-[10px]" src="/c2-assets/potato.png" alt="">
+                      <img class="w-[70px] rounded-[10px]" src="c2-assets/potato.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -147,7 +147,7 @@
 
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px] rounded-[10px]" src="/c2-assets/tometo.png" alt="">
+                      <img class="w-[70px] rounded-[10px]" src="c2-assets/tometo.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -159,7 +159,7 @@
               </div>
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px]  rounded-[10px]" src="/c2-assets/nion.png" alt="">
+                      <img class="w-[70px]  rounded-[10px]" src="c2-assets/nion.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -172,7 +172,7 @@
 
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px] rounded-[10px]" src="/c2-assets/potato.png" alt="">
+                      <img class="w-[70px] rounded-[10px]" src="c2-assets/potato.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -185,7 +185,7 @@
 
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px] rounded-[10px]" src="/c2-assets/tometo.png" alt="">
+                      <img class="w-[70px] rounded-[10px]" src="c2-assets/tometo.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -197,7 +197,7 @@
               </div>
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px]  rounded-[10px]" src="/c2-assets/nion.png" alt="">
+                      <img class="w-[70px]  rounded-[10px]" src="c2-assets/nion.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -210,7 +210,7 @@
 
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px] rounded-[10px]" src="/c2-assets/potato.png" alt="">
+                      <img class="w-[70px] rounded-[10px]" src="c2-assets/potato.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -223,7 +223,7 @@
 
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
                   <div>
-                      <img class="w-[70px] rounded-[10px]" src="/c2-assets/tometo.png" alt="">
+                      <img class="w-[70px] rounded-[10px]" src="c2-assets/tometo.png" alt="">
                   </div>
                   <div class="flex flex-col gap-2">
                       <p>
@@ -326,26 +326,26 @@
         <div class="bg-[#115414] w-full h-full p-4 rounded-[10px] flex justify-between lg:flex-[2]">
             <div class="flex flex-col justify-around">
                 <div>
-                    <img src="/c2-assets/dawat-logo.png" alt="">
+                    <img src="c2-assets/dawat-logo.png" alt="">
                 </div>
                 <button class="bg-[#62b76f] hover:text-black hover:bg-white text-white p-4 rounded-[10px] mt-4">Cook Exotic Dishes</button>
                 <p class="font-normal text-white text-4xl">UP to <span class="font-bold text-[22px] lg:text-[40px] text-white">20% OFF</span></p>
             </div>
             <div>
-                <img src="/c2-assets/dawat-mock-up.png" alt="">
+                <img src="c2-assets/dawat-mock-up.png" alt="">
             </div>
         </div>
         
         <div class="bg-[#102861] w-full overflow-y-hidden h-[343px] p-4 rounded-[10px] flex justify-between items-center lg:flex-1 ">
             <div class="flex flex-col justify-around">
                 <div>
-                    <img class="" src="/c2-assets/india-gate-logo.png" alt="">
+                    <img class="" src="c2-assets/india-gate-logo.png" alt="">
                 </div>
                 <button class="bg-[#2a4d97]  hover:text-black hover:bg-white text-white p-4 rounded-[10px] mt-4">World’s No.1 Rice</button>
                 <p class="pt-8 font-normal text-white text-4xl">UP to <span class="font-bold text-[22px] lg:text-[40px] text-white">40% OFF</span></p>
             </div>
             <div>
-                <img src="/c2-assets/india-gate-mock-up.png" alt="">
+                <img src="c2-assets/india-gate-mock-up.png" alt="">
             </div>
         </div>
     </div>
@@ -362,7 +362,7 @@
     relative translate-y-[50%]
     p-6 mx-6 flex flex-col lg:flex-row justify-around items-center">
     <div>
-        <img src="/c2-assets/vegetable-busket.png" alt="">
+        <img src="c2-assets/vegetable-busket.png" alt="">
     </div>
     <div class="flex flex-col gap-6 items-center lg:items-start">
         <h1 class="font-[700px] text-[36px] text-[#179800]">Get Grocery News!</h1>
@@ -378,7 +378,7 @@
 <div class=" bg-[#179800] text-white">
   <footer class="flex flex-col lg:flex-row gap-6 px-6 lg:items-end justify-between pt-[500px] lg:pt-[300px] pb-[140px] lg:mx-[140px] ">
       <div>
-          <img src="/c2-assets/logo-footer.png" alt="">
+          <img src="c2-assets/logo-footer.png" alt="">
           <p class="text-gray-300 text-wrap pt-3">Discover a world of treats, toys, and essentials <br>handpicked for your
               furry friends</p>
       </div>
