--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
 <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/c009c39c8f.js" crossorigin="anonymous"></script>
 <script src="https://cdn.tailwindcss.com"></script>
@@ -23,8 +25,18 @@
     }
   </script>
 
+  <style>
+    @font-face {
+  font-family: sora ;
+  src: url("/Sora-VariableFont_wght.ttf");
+}
+.sora-font{
+    font-family: sora !important;
+}
+  </style>
+
 </head>
-<body >
+<body class="sora-font" >
   <marquee behavior="" direction="" class="py-2 shadow-xl border-green-600 my-2"><img class="max-w-20" src="c2-assets/logo-header.png" alt=""></marquee>
    <header>
     <div class="main_visual bg-gradient-to-t from-[#efebe4] to-[#fffefe]">
@@ -33,7 +45,7 @@
               <img src="c2-assets/logo-header.png" alt="logo">
           </div>
           <div class="menu hidden lg:block">
-              <ul class="flex text-[#111111] text-[20px] gap-6">
+              <ul class="flex text-[#111111] text-xl  gap-6">
                   <li><a href="#">Product</a></li>
                   <li><a href="#">Service</a></li>
                   <li><a href="#">Contact Us</a></li>
@@ -52,11 +64,11 @@
 
       </div>
       <div class="heading mx-6 lg:mx-[140px] flex flex-col gap-6 justify-center items-center mt-[40px]">
-          <h1 class="font-semibold text-[32px] lg:text-[54px]  text-center text-[#111111]
+          <h1    class="  font-semibold text-[32px] lg:text-[54px]  text-center text-[#111111] lg:max-w-4xl
           
-            transition-transform duration-300 ease-out hover:scale-110 hover:rotate-6 
+            transition-transform duration-300 ease-out hover:scale-110 hover:rotate-6  
           
-          ">Freshness You <span class="text-[#179800] "> 
+          ">Freshness You <span style="font-family: sora ;"  class="text-[#179800] "> 
                   Can <br>
                   Count </span>On, Prices You’ll Love!</h1>
           <p class="font-[400] text-[20px]  text-center max-w-4xl text-[#111111]">Shop your daily essentials at unbeatable prices.
@@ -72,7 +84,7 @@
 
 
    <main >
-    <div class="service my-[140px] flex flex-col gap-6 mx-6 lg:mx-[140px]">
+    <div class="service my-[140px] flex flex-col gap-4 mx-6 lg:mx-[140px]">
       <h1 class="text-[32px] text-[#179800] font-[600]">Service</h1>
       <div class="grid  lg:grid-cols-3 gap-6">
           <div class="flex flex-col gap-6 items-center text-center bg-[#efebe4]  p-6 rounded-[16px]">
