--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.8
                       </p>
                       <p class="text-[20px] font-[500]">Onion 1KG</p>
-                      <p>$45.9</p>
+                      <p class="font-bold">$45.9</p>
                   </div>
               </div>
 
@@ -153,11 +153,11 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.2
                       </p>
                       <p class="text-[20px] font-[500]">Potato 1KG</p>
-                      <p>$30.5</p>
+                      <p class="font-bold">$30.5</p>
                   </div>
               </div>
 
-              <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
+              <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-xl">
                   <div>
                       <img class="w-[70px] rounded-[10px]" src="c2-assets/tometo.png" alt="">
                   </div>
@@ -166,7 +166,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.7
                       </p>
                       <p class="text-[20px] font-[500]">Tometo 1KG</p>
-                      <p>$39.2</p>
+                      <p class="font-bold">$39.2</p>
                   </div>
               </div>
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
@@ -178,7 +178,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.8
                       </p>
                       <p class="text-[20px] font-[500]">Onion 1KG</p>
-                      <p>$45.9</p>
+                      <p class="font-bold">$45.9</p>
                   </div>
               </div>
 
@@ -191,7 +191,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.2
                       </p>
                       <p class="text-[20px] font-[500]">Potato 1KG</p>
-                      <p>$30.5</p>
+                      <p class="font-bold"> $30.5</p>
                   </div>
               </div>
 
@@ -204,7 +204,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.7
                       </p>
                       <p class="text-[20px] font-[500]">Tometo 1KG</p>
-                      <p>$39.2</p>
+                      <p class="font-bold">$39.2</p>
                   </div>
               </div>
               <div class="flex gap-4 items-center justify-between bg-white p-4 rounded-[10px]">
@@ -216,7 +216,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.8
                       </p>
                       <p class="text-[20px] font-[500]">Onion 1KG</p>
-                      <p>$45.9</p>
+                      <p class="font-bold">$45.9</p>
                   </div>
               </div>
 
@@ -229,7 +229,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.2
                       </p>
                       <p class="text-[20px] font-[500] ">Potato 1KG</p>
-                      <p>$30.5</p>
+                      <p class="font-bold">$30.5</p>
                   </div>
               </div>
 
@@ -242,7 +242,7 @@
                           <i class="fa-solid fa-star text-[#FFC107]"></i> 4.7
                       </p>
                       <p class="text-[20px] font-[500]">Tometo 1KG</p>
-                      <p>$39.2</p>
+                      <p class="font-bold">$39.2</p>
                   </div>
               </div>
 
