--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <style>
     @font-face {
   font-family: sora ;
-  src: url("/Sora-VariableFont_wght.ttf");
+  src: url("Sora-VariableFont.ttf");
 }
 .sora-font{
     font-family: sora !important;
@@ -259,7 +259,7 @@
   </section>
 
 
-<!--  -->
+
 <section class="bg-[#EFEBE3] mt-10">
   <div class="flex flex-col gap-6 mx-6  py-8  lg:mx-[140px]">
 
@@ -317,18 +317,11 @@
     <div class="stat-desc text-secondary">27 tasks remaining</div>
   </div>
 </div>
-
-
-
 <!-- end extra section -->
 
 </div>
 </section>
 
-
-
-<!--  -->
-  
 <section>
   <div class="flex flex-col gap-6 mx-6  pt-[120px]  lg:mx-[140px]">
     <h1 class="text-[32px] text-[#179800] font-[600]">Arrival & Offers</h1>
@@ -386,7 +379,6 @@
     </div>
 </div>
 
-
 <div class=" bg-[#179800] text-white">
   <footer class="flex flex-col lg:flex-row gap-6 px-6 lg:items-end justify-between pt-[500px] lg:pt-[300px] pb-[140px] lg:mx-[140px] ">
       <div>
@@ -410,14 +402,7 @@
       </div>
   </footer>
 </div>
-
-
    </footer>
-
-
-
-
-
 
 
 </body>
